--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+  <meta name="google-site-verification" content="Y9De_RXQOQPCYBZL4mVTeT029zl0ph5MmrWGlLOWofI" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>flip coin</title>
@@ -18,3 +19,4 @@
   <script src="java script.js" defer></script>
 </body>
 </html>
+
